# CSC8503

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini
Assets/Data/: lvl1.navmesh  lvl2.txt
Assets/Shaders/VK/: Debug.frag.spv  Debug.vert.spv  DebugText.frag.spv  DebugText.vert.spv  DebugTexture.frag.spv  DebugTexture.vert.spv  Shadow.vert.spv  scene.frag.spv  scene.vert.spv  shadow.frag.spv  skybox.frag.spv  skybox.vert.spv
CMake/: setupProj.cmake
CSC8503/: CMakeLists.txt  Enemy.cpp  Enemy.h  GameTechRenderer.cpp  GameTechRenderer.h  LevelEnd.h  Main.cpp  NetworkPlayer.cpp  NetworkPlayer.h  NetworkedGame.cpp  NetworkedGame.h  Oscillator.cpp  Oscillator.h  Pane.h  Player.cpp  Player.h  StateGameObject.cpp  StateGameObject.h  TutorialGame.cpp  TutorialGame.h  serverCore.h
CSC8503/logging/: log.h  logger.cpp
CSC8503/menus/: menu.h  pause.h
CSC8503/scenes/: IScene.h  collisionTest.h  default.h
CSC8503CoreClasses/: CMakeLists.txt  CollisionDetection.cpp  GameObject.cpp  GameObject.h  GamePlayer.h  GameWorld.cpp  GameWorld.h  PhysicsSystem.cpp  QuadTree.h  Transform.h
CSC8503CoreClasses/ai/automata/: PushdownMachine.cpp  PushdownMachine.h  PushdownState.h
CSC8503CoreClasses/ai/behaviour_trees/: BehaviourNode.h  BehaviourNodeWithChildren.h  BehaviourParallel.h  BehaviourSelector.h  BehaviourSequence.h
CSC8503CoreClasses/ai/pathfinding/: NavigationGrid.cpp  NavigationGrid.h  NavigationMap.h  NavigationMesh.cpp  NavigationMesh.h  PathfindingService.cpp  PathfindingService.h
CSC8503CoreClasses/ai/state_machine/: State.h  StateMachine.cpp  StateMachine.h  StateTransition.h
CSC8503CoreClasses/collisions/: AABBVolume.h  CapsuleVolume.h  CollisionDetection.cpp  CollisionDetection.h  CollisionVolume.h  OBBVolume.h  SphereVolume.h
CSC8503CoreClasses/constraints/: Constraint.h  OffsetTiedConstraint.cpp  OffsetTiedConstraint.h  OrientationConstraint.cpp  PositionConstraint.cpp  TiedConstraint.cpp  TiedConstraint.h
CSC8503CoreClasses/logging/: logger.cpp  logger.h
CSC8503CoreClasses/networking/: GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  NetworkObject.h  NetworkState.h  ip.h  packets.h
CSC8503CoreClasses/physics/: PhysicsObject.cpp  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h
NCLCoreClasses/: Bitflag.h  CMakeLists.txt  Channel.h  IteratorRange.h  KeyboardMouseController.h  Mutex.h  Overloaded.h  RendererBase.cpp  RendererBase.h  Result.h  RwLock.h  Vector.h  VectorFormat.h  Win32Keyboard.cpp  Win32Mouse.cpp  Win32Window.cpp  Win32Window.h  Window.h  gui.h
OpenGLRendering/: CMakeLists.txt  OGLRenderer.cpp  OGLRenderer.h  OGLShader.cpp  OGLTexture.cpp
OpenGLRendering/logging/: glLogger.cpp  glLogger.h
VulkanRendering/: CMakeLists.txt  VulkanShaderModule.cpp
src/: CMakeLists.txt  ClientGame.cpp  ClientGame.h  DummyWindow.h  ServerGame.cpp  ServerGame.h  clientMain.cpp  levels.h  serverCore.cpp  serverCore.h  serverMain.cpp
src/client/: CMakeLists.txt  ClientGame.cpp  ClientGame.h
src/client/menus/: connectionGuard.h  host.h  join.h  menu.h  multiplayer.h  pause.h  solo.h
src/menus/: connectionGuard.h  host.h  hostGuard.h  inLevel.h  join.h  levelSelect.h  menu.h  multiplayer.h  pause.h  singleplayer.h
src/server/: CMakeLists.txt  DummyRenderer.h  ServerGame.cpp  ServerGame.h  main.cpp
